Edit audit_street_name to investigate strange names

--- a/osmProject.ipynb
+++ b/osmProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -363,6 +363,124 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "---------------------------------\n",
+      "ENTRY:  Mcgarigle \n",
+      "\n",
+      "{'changeset': '32996683',\n",
+      " 'id': '356548097',\n",
+      " 'lat': '48.5133762',\n",
+      " 'lon': '-122.2206887',\n",
+      " 'timestamp': '2015-07-31T00:22:40Z',\n",
+      " 'uid': '1529630',\n",
+      " 'user': 'Brad Meteor',\n",
+      " 'version': '3'}\n",
+      "\t{'k': 'ele', 'v': '19'}\n",
+      "\t{'k': 'name', 'v': 'Evergreen Elementary School'}\n",
+      "\t{'k': 'amenity', 'v': 'school'}\n",
+      "\t{'k': 'addr:city', 'v': 'Sedro Woolley'}\n",
+      "\t{'k': 'addr:street', 'v': 'Mcgarigle'}\n",
+      "\t{'k': 'gnis:created', 'v': '10/01/1990'}\n",
+      "\t{'k': 'addr:postcode', 'v': '98284'}\n",
+      "\t{'k': 'gnis:state_id', 'v': '53'}\n",
+      "\t{'k': 'gnis:county_id', 'v': '057'}\n",
+      "\t{'k': 'gnis:feature_id', 'v': '1531302'}\n",
+      "\t{'k': 'addr:housenumber', 'v': '1111'}\n",
+      "Already Checked:  ['Mcgarigle']\n",
+      "\n",
+      "---------------------------------\n",
+      "ENTRY:  James \n",
+      "\n",
+      "{'changeset': '7661586',\n",
+      " 'id': '1216905966',\n",
+      " 'lat': '47.602414',\n",
+      " 'lon': '-122.332316',\n",
+      " 'timestamp': '2011-03-25T01:34:14Z',\n",
+      " 'uid': '337321',\n",
+      " 'user': 'gonzoramos',\n",
+      " 'version': '2'}\n",
+      "\t{'k': 'name', 'v': 'Pioneer Square Station'}\n",
+      "\t{'k': 'highway', 'v': 'bus_stop'}\n",
+      "\t{'k': 'addr:street', 'v': 'James'}\n",
+      "\t{'k': 'addr:housenumber', 'v': '216'}\n",
+      "Already Checked:  ['Mcgarigle', 'James']\n",
+      "\n",
+      "---------------------------------\n",
+      "ENTRY:  Broadway \n",
+      "\n",
+      "{'changeset': '20942891',\n",
+      " 'id': '1735589414',\n",
+      " 'lat': '47.6146295',\n",
+      " 'lon': '-122.320559',\n",
+      " 'timestamp': '2014-03-06T03:59:36Z',\n",
+      " 'uid': '1966825',\n",
+      " 'user': 'pxYyFQZkbA',\n",
+      " 'version': '4'}\n",
+      "\t{'k': 'name', 'v': 'Moti Mahal Indian Cuisine'}\n",
+      "\t{'k': 'source', 'v': 'King County GIS'}\n",
+      "\t{'k': 'amenity', 'v': 'fast_food'}\n",
+      "\t{'k': 'cuisine', 'v': 'indian'}\n",
+      "\t{'k': 'addr:city', 'v': 'Seattle'}\n",
+      "\t{'k': 'addr:street', 'v': 'Broadway'}\n",
+      "\t{'k': 'addr:postcode', 'v': '98122'}\n",
+      "\t{'k': 'addr:housenumber', 'v': '1520'}\n",
+      "Already Checked:  ['Mcgarigle', 'James', 'Broadway']\n",
+      "\n",
+      "---------------------------------\n",
+      "ENTRY:  Pine \n",
+      "\n",
+      "{'changeset': '14796087',\n",
+      " 'id': '1953045564',\n",
+      " 'lat': '47.6103989',\n",
+      " 'lon': '-122.3394159',\n",
+      " 'timestamp': '2013-01-26T18:22:08Z',\n",
+      " 'uid': '492311',\n",
+      " 'user': 'zacmccormick',\n",
+      " 'version': '3'}\n",
+      "\t{'k': 'amenity', 'v': 'waste_basket'}\n",
+      "\t{'k': 'addr:city', 'v': 'Seattle'}\n",
+      "\t{'k': 'addr:state', 'v': 'WA'}\n",
+      "\t{'k': 'addr:street', 'v': 'Pine'}\n",
+      "\t{'k': 'addr:country', 'v': 'US'}\n",
+      "\t{'k': 'addr:postcode', 'v': '98121'}\n",
+      "\t{'k': 'addr:housenumber', 'v': '211'}\n",
+      "Already Checked:  ['Mcgarigle', 'James', 'Broadway', 'Pine']\n",
+      "\n",
+      "---------------------------------\n",
+      "ENTRY:  http://local.safeway.com/wa/tacoma-1594.html \n",
+      "\n",
+      "{'changeset': '9752240',\n",
+      " 'id': '136049177',\n",
+      " 'timestamp': '2011-11-06T03:14:20Z',\n",
+      " 'uid': '416346',\n",
+      " 'user': 'Brian@Brea',\n",
+      " 'version': '1'}\n",
+      "\t{'k': 'name', 'v': 'Safeway 1594 Fuel Station'}\n",
+      "\t{'k': 'brand', 'v': 'Safeway'}\n",
+      "\t{'k': 'amenity', 'v': 'fuel'}\n",
+      "\t{'k': 'building', 'v': 'yes'}\n",
+      "\t{'k': 'operator', 'v': 'Safeway'}\n",
+      "\t{'k': 'addr:street', 'v': 'http://local.safeway.com/wa/tacoma-1594.html'}\n",
+      "\t{'k': 'designation', 'v': 'Safeway 1594'}\n",
+      "\t{'k': 'addr:postcode', 'v': '98408'}\n",
+      "\t{'k': 'addr:housenumber', 'v': '707'}\n",
+      "Already Checked:  ['Mcgarigle', 'James', 'Broadway', 'Pine', 'http://local.safeway.com/wa/tacoma-1594.html']\n",
+      "\n",
+      "---------------------------------\n",
+      "ENTRY:  Dakota \n",
+      "\n",
+      "{'changeset': '33362226',\n",
+      " 'id': '365935588',\n",
+      " 'timestamp': '2015-08-16T03:18:25Z',\n",
+      " 'uid': '447903',\n",
+      " 'user': 'Glassman',\n",
+      " 'version': '1'}\n",
+      "\t{'k': 'building', 'v': 'residential'}\n",
+      "\t{'k': 'addr:city', 'v': 'Mount Vernon'}\n",
+      "\t{'k': 'addr:street', 'v': 'Dakota'}\n",
+      "\t{'k': 'addr:postcode', 'v': '98274'}\n",
+      "\t{'k': 'addr:housenumber', 'v': '3101'}\n",
+      "Already Checked:  ['Mcgarigle', 'James', 'Broadway', 'Pine', 'http://local.safeway.com/wa/tacoma-1594.html', 'Dakota']\n",
       "Fir  :  1\n",
       "214  :  1\n",
       "Northeast  :  582\n",
@@ -572,6 +690,20 @@
     "expected = [\"Street\", \"Avenue\", \"Boulevard\", \"Drive\", \"Court\", \"Place\", \"Square\", \"Lane\", \"Road\", \n",
     "            \"Trail\", \"Parkway\", \"Commons\"]\n",
     "\n",
+    "expectedDirection = ['North','South','East','West','Northwest','Northeast',\n",
+    "                     'Southeast','Southwest']\n",
+    "\n",
+    "questionableNames = ['Fir','Pine','Station','Plateau','Broadway','Rise','Meadows']\n",
+    "errorNames = ['Mcgarigle','Mall','James','Tumwater','Dakota','98296']\n",
+    "numberForName = ['214','210']\n",
+    "newNames =['Ridge','Heights','Gate','Terrace','Alley','Way','Loop']\n",
+    "onlyOne = ['Hills','Cove','Landing','Grove']\n",
+    "url =['http://local.safeway.com/wa/tacoma-1594.html']\n",
+    "alreadyChecked = []\n",
+    "investigationList = [questionableNames,errorNames,numberForName,\n",
+    "                     newNames,onlyOne,url]\n",
+    "                     \n",
+    "\n",
     "# UPDATE THIS VARIABLE\n",
     "mapping = { \"St\": \"Street\",\n",
     "            \"St.\": \"Street\",\n",
@@ -593,11 +725,24 @@
     "    osm_file = open(osm_file, \"r\")\n",
     "    street_types = defaultdict(set)\n",
     "    for event, elem in ET.iterparse(osm_file, events=(\"start\",)):\n",
-    "\n",
     "        if elem.tag == \"node\" or elem.tag == \"way\":\n",
     "            for tag in elem.iter(\"tag\"):\n",
     "                if is_street_name(tag):\n",
     "                    audit_street_type(street_types, tag.attrib['v'])\n",
+    "                    for typeOfStreet in investigationList:\n",
+    "                        for entry in typeOfStreet:\n",
+    "                            if str(tag.attrib['v'])==str(entry):\n",
+    "                                if entry in alreadyChecked:\n",
+    "                                    pass    \n",
+    "                                else:\n",
+    "                                    print '\\n---------------------------------'\n",
+    "                                    print 'ENTRY: ',entry,'\\n'\n",
+    "                                    alreadyChecked.append(entry)\n",
+    "                                    pprint.pprint(elem.attrib)\n",
+    "                                    for tag_1 in elem.iter('tag'):\n",
+    "                                        print '\\t',tag_1.attrib\n",
+    "                                    print 'Already Checked: ',alreadyChecked\n",
+    "                                \n",
     "        elem.clear()\n",
     "    return street_types\n",
     "\n",
@@ -624,11 +769,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'db' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-51e5365da655>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Print first 100 items in seattle collection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mseattle_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseattle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mentry\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseattle_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'db' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Print first 100 items in seattle collection\n",
     "\n",
